--- a/style.css
+++ b/style.css
@@ -1,27 +1,107 @@
 * {
     font-family: 'Sora', sans-serif;
-    width: 1280px;
     margin: 0;
     padding: 0;
+
     /* border: 1px solid; */
 }
 
 .star-icon {
+    font-size: larger;
     background-color: #F5C044;
     background-repeat: no-repeat;
-    background-size: 50px;
+    border-radius: 100px;
+    width: 23px;
+    margin-left: 5px;
 }
 
-.heading{
+.heading {
+    margin-top: 10px;
+}
+
+.main-container {
+    display: flex;
+    justify-content: center;
+    width: 1280px;
+    padding: 100px 50px;
+    gap: 30px;
+    background-color: #fafaf9;
+}
+
+.heading {
     font-size: 2.25rem;
 }
-.p-text{
+
+.p-text {
+    margin-top: 20px;
+    width: 560px;
+    line-height: 35px;
     font-size: 1.25rem;
 }
-.checkbox-tex{
+
+.checkbox-text {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 30px;
     font-size: 0.87rem;
 }
 
-.main-container{
+.checkbox-text p {
     display: flex;
+    align-items: center;
+}
+
+.checkbox-text img {
+    padding-right: 5px;
+}
+
+.right-part {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+p {
+    color: #52525A;
+}
+
+.right-part img {
+    width: fit-content;
+}
+
+
+.google,
+.meta {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 15px;
+}
+
+.m-png img,
+.g-png img {
+    width: 100px;
+}
+
+.gm-common {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.google {
+    margin-left: 35%;
+}
+
+.meta {
+    margin-right: 35%;
+}
+
+.mg-c-t>div>p {
+    margin-top: 10px;
+    line-height: 30px;
 }
