--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@
 }
 
 .star-icon {
-    font-size: larger;
+
     background-color: #F5C044;
     background-repeat: no-repeat;
-    border-radius: 100px;
-    width: 23px;
-    margin-left: 5px;
+    border-radius: 60px;
+    width: 50px;
+    padding: 10px;
+}
+.star-icon img{
+    width: 50px;
 }
 
 .heading {
@@ -106,7 +109,7 @@ p {
     line-height: 30px;
 }
 
-@media screen and (max-width:640px) {
+@media screen and (max-width:576px) {
     .main-container{
         flex-direction: column;
         width: fit-content;
